<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aigestudio="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:singleLine="true"
        android:textSize="30sp"
        android:text="@string/dua_prompt_birthday"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:singleLine="true"
        android:textSize="20sp"
        android:id="@+id/dua_register_tv_curBirthday" />

    <com.aigestudio.wheelpicker.widgets.WheelDatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/dua_register_date_picker">
    </com.aigestudio.wheelpicker.widgets.WheelDatePicker>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_bg_light_green"
            android:text="@string/dua_button_last_step"
            android:id="@+id/dua_register_button_last_step"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_bg_light_green"
            android:text="@string/dua_button_next_step"
            android:id="@+id/dua_register_button_next_step"/>
    </RelativeLayout>
</LinearLayout>