<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textAlignment="center"
        android:singleLine="true"
        android:textSize="30sp"
        android:text="@string/dua_prompt_sex"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gender_male"
            android:drawablePadding="-20dp"
            android:checked="true" />
        <ImageView
            android:id = "@+id/country_other"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/slash"/>
        <ImageView
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gender_female"
            android:button="@null"
            android:drawablePadding="-20dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_bg_light_green"
            android:text="@string/dua_button_last_step"
            android:id="@+id/dua_register_button_last_step"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_bg_light_green"
            android:text="@string/dua_button_next_step"
            android:id="@+id/dua_register_button_next_step"/>
    </RelativeLayout>
</LinearLayout>